# exmpl-cmake-grpc

./: .gitignore  CMakeLists.txt  PROTOBUF.md  README.md  conanfile.txt
.github/workflows/: build.yml
client/src/: main.cpp
proto/: CMakeLists.txt
server/src/: main.cpp
